Web SQL用にDBを更新

--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-<div class='header'><h1>つくしのこ保育園　園児名簿登録</h1></div>
+<div class='header'><h1><center>つくしのこ保育園名簿</center></h1></div>
+
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter name"/>
     <ul class='list employee-list'></ul>
