--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -6,6 +6,7 @@
 
     <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/roster.css" rel="stylesheet">
 </head>
 <body>
 
