--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -6,7 +6,8 @@
 
     <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <link href="assets/css/roster.css" rel="stylesheet">
+    <link href="css/roster.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -15,6 +16,17 @@
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter name"/>
     <ul class='list employee-list'></ul>
+</div>
+
+<table class="table table-striped">
+  <tr>
+    <th>所属</th>
+    <th>名前</th>
+  </tr>
+  <tr>
+    <th>icon</th>
+    <th>hogehoge</th>
+  </tr>
 </div>
 
 <!-- Load script -->
