確認ボタンをボタンの形に変更(ボタン以外の範囲は反応しない)

--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -13,7 +13,7 @@
 <div class='header'><h2><center>つくしのこ保育園<BR>園児名簿登録</center></h2></div>
 <p>以下に必要事項を入力してください
 </p>
-<FORM>
+<form action=“comfrimation.html” mathod=“post” enctype=“text/plain”>
 園児のお名前<BR>
 <INPUT type=“test” name=“name”></P>
 
@@ -51,10 +51,10 @@
 <INPUT type=“test” name=“mail”>
 
 </p>
-</FORM>
 
+<center><button type =‘submit’ name=‘action’ value=‘kakunin’>確認画面へ</button></center>
+</form>
 
-<A href=“comfirmation.html”><center><button class=“kakunin”>確認画面へ</button></center></A>
 
 </body>
 </html>
