--- a/development/kindergarten_roster_management/www/detailRoster.html
+++ b/development/kindergarten_roster_management/www/detailRoster.html
@@ -4,51 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
+    <!-- <link href="assets/ratchet/css/ratchet.css" rel="stylesheet"> -->
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href="css/roster.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<div class='header'><h1><center>つくしのこ保育園名簿</center></h1></div>
+<div class='header'><h1><center>詳細情報</center></h1></div>
 
-<div class='search-view'>
-    <input class='search-key' type="search" placeholder="Enter name"/>
-    <ul class='list employee-list'></ul>
-</div>
+<input type="button" value="前のページへ戻る" width="5px" onclick="history.back()">
 
 <table class="table table-striped">
   <!-- table label -->
   <tr>
-    <th>所属</th>
+    <th>ID</th>
     <th>名前</th>
+    <th>住所</th>
+    <th>電話番号</th>
   </tr>
 
   <!-- ↓contents of table -->
   <tr>
-    <th><img src="img/bird.png" alt="ひよこ組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/83Ic6F">ピヨピヨ</a></th>
-  </tr>
-
-  <tr>
-    <th><img src="img/rion.png" alt="らいおん組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/xD5HFp">がおー</a></th>
-  </tr>
-
-  <tr>
-    <th><img src="img/rabit.png" alt="うさぎ組" height="50px" width="50px"/></th>
-    <th><a href="index.html">ぴょんぴょん</th>
-  </tr>
-
-  <tr>
-    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>小学生だ蔵</th>
-  </tr>
-
-  <tr>
-      <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>卒園した蔵</th>
+    <th>1</th>
+    <th>ぴょんぴょん</th>
+    <th>ウサギ県ウサギ市ウサギ町5丁目</th>
+    <th>090-1122-3344</th>
   </tr>
 
 </div>
