スクショの追加

--- a/development/kindergarten_roster_management/www/event.html
+++ b/development/kindergarten_roster_management/www/event.html
@@ -8,118 +8,117 @@
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class='header'><h1>イベントハガキ作成</h1></div>
-    <table>
+    <br>
+    <div class='header'><h1><center>イベントハガキ作成</center></h1></div>
+    <table class="table table-striped">
         <tr>
-
             <p>
                 <select style="width: 200px">
-                    <option value="">イベント</option>
-                    <option value="バザー">バザー</option>
-                    <option value="運動会">運動会</option>
-                    <option value="お祭り">お祭り</option>
-                    <option value="餅つき">餅つき</option>
-                    <option value="卒園式">卒園式</option>
+                    <option value=""><center>イベント</center></option>
+                    <option value="バザー"><center>バザー</center></option>
+                    <option value="運動会"><center>運動会</center></option>
+                    <option value="お祭り"><center>お祭り</center></option>
+                    <option value="餅つき"><center>餅つき</center></option>
+                    <option value="卒園式"><center>卒園式</center></option>
                 </select>
             </p>
         </tr>
-        <th>
-            <p>
-                <select style="width: 200px">
-                    <option value="">年</option>
-                    <option value="2016">2016</option>
-                    <option value="2017">2017</option>
-                    <option value="2018">2018</option>
-                    <option value="2019">2019</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2016</option>
-                    <option value="2022">2017</option>
-                    <option value="2023">2018</option>
-                    <option value="2024">2019</option>
-                    <option value="2025">2020</option>
-                    <option value="2026">2016</option>
-                    <option value="2027">2017</option>
-                    <option value="2028">2018</option>
-                    <option value="2029">2019</option>
-                    <option value="2030">2020</option>
-                    <option value="2031">2016</option>
-                    <option value="2032">2017</option>
-                    <option value="2033">2018</option>
-                    <option value="2034">2019</option>
-                    <option value="2035">2020</option>
-                    <option value="2036">2016</option>
-                    <option value="2037">2017</option>
-                    <option value="2038">2018</option>
-                    <option value="2039">2019</option>
-                    <option value="2040">2020</option>
-                </select>
-            </p>
-        </th>
-        <th>
-            <p>
-                <select style="width: 200px">
-                    <option value="">月</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                </select>
-            </p>
-        </th>
-        <th>
-            <p>
-                <select style="width: 200px">
-                    <option value="">日</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                    <option value="24">24</option>
-                    <option value="25">25</option>
-                    <option value="26">26</option>
-                    <option value="27">27</option>
-                    <option value="28">28</option>
-                    <option value="29">29</option>
-                    <option value="30">30</option>
-                    <option value="31">31</option>
-                </select>
-            </p>
-        </th>
         <tr>
+            <th>
+                <p>
+                    <select style="width: 200px">
+                        <option value="">年</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2016</option>
+                        <option value="2022">2017</option>
+                        <option value="2023">2018</option>
+                        <option value="2024">2019</option>
+                        <option value="2025">2020</option>
+                        <option value="2026">2016</option>
+                        <option value="2027">2017</option>
+                        <option value="2028">2018</option>
+                        <option value="2029">2019</option>
+                        <option value="2030">2020</option>
+                        <option value="2031">2016</option>
+                        <option value="2032">2017</option>
+                        <option value="2033">2018</option>
+                        <option value="2034">2019</option>
+                        <option value="2035">2020</option>
+                        <option value="2036">2016</option>
+                        <option value="2037">2017</option>
+                        <option value="2038">2018</option>
+                        <option value="2039">2019</option>
+                        <option value="2040">2020</option>
+                    </select>
+                </p>
+            </th>
+            <th>
+                <p>
+                    <select style="width: 200px">
+                        <option value="">月</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                </p>
+            </th>
+            <th>
+                <p>
+                    <select style="width: 200px">
+                        <option value="">日</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
+                    </select>
+                </p>
+            </th>
     </table>
-
-    <!-- Load script -->
-    <script src="cordova.js"></script>
     <a href=“event2.html”><center>印刷画面へ</center></a>
 
 
+    <!-- Load script -->
+    <script src="cordova.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/handlebars.js"></script>
     <script src="js/services/websql/EmployeeService.js"></script>
