遷移先のリンクから””を削除

--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -13,7 +13,7 @@
 <div class='header'><h2><center>つくしの子保育園<BR>園児名簿登録</center></h2></div>
 <p>以下に必要事項を入力してください
 </p>
-<form action=“comfirmation.php” mathod=“post” enctype=“text/plain”>
+<form action=comfirmation.php mathod=“post” enctype=“text/plain”>
 園児のお名前<BR>
 <INPUT type=“test” name=“name”></P>
 
