--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -59,6 +59,39 @@
     <th>卒園した蔵</th>
   </tr>
 
+
+
+  <!-- ↓contents of table -->
+  <tr>
+    <th>1</th>
+    <th><img src="img/bird.png" alt="ひよこ組" height="50px" width="50px"/></th>
+    <th><a href="http://goo.gl/83Ic6F">ピヨピヨ</a></th>
+  </tr>
+
+  <tr>
+    <th>2</th>
+    <th><img src="img/rion.png" alt="らいおん組" height="50px" width="50px"/></th>
+    <th><a href="http://goo.gl/xD5HFp">がおー</a></th>
+  </tr>
+
+  <tr>
+    <th>3</th>
+    <th><img src="img/rabit.png" alt="うさぎ組" height="50px" width="50px"/></th>
+    <th><a href="detailRoster.html">ぴょんぴょん</th>
+  </tr>
+
+  <tr>
+    <th>4</th>
+    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
+    <th>小学生だ蔵</th>
+  </tr>
+
+  <tr>
+    <th>5</th>
+    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
+    <th>卒園した蔵</th>
+  </tr>
+
 </div>
 
 <!-- Load script -->
