--- a/development/kindergarten_roster_management/www/event.html
+++ b/development/kindergarten_roster_management/www/event.html
@@ -3,118 +3,192 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
     <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 <body>
+    <div class='header'><h1>イベントハガキ作成</h1></div>
+
+
+    <select name="select" onchange="select_outputSelectedValueAndText(this);">
+        <option value="0">イベント</option>
+        <option value="1">バザー</option>
+        <option value="2">運動会</option>
+        <option value="3">お祭り</option>
+        <option value="4">餅つき</option>
+        <option value="5">卒園式</option>
+    </select>
     <br>
-    <div class='header'><h1><center>イベントハガキ作成</center></h1></div>
-    <table class="table table-striped">
-        <tr>
-            <p>
-                <select style="width: 200px">
-                    <option value=""><center>イベント</center></option>
-                    <option value="バザー"><center>バザー</center></option>
-                    <option value="運動会"><center>運動会</center></option>
-                    <option value="お祭り"><center>お祭り</center></option>
-                    <option value="餅つき"><center>餅つき</center></option>
-                    <option value="卒園式"><center>卒園式</center></option>
-                </select>
-            </p>
-        </tr>
-        <tr>
-            <th>
-                <p>
-                    <select style="width: 200px">
-                        <option value="">年</option>
-                        <option value="2016">2016</option>
-                        <option value="2017">2017</option>
-                        <option value="2018">2018</option>
-                        <option value="2019">2019</option>
-                        <option value="2020">2020</option>
-                        <option value="2021">2016</option>
-                        <option value="2022">2017</option>
-                        <option value="2023">2018</option>
-                        <option value="2024">2019</option>
-                        <option value="2025">2020</option>
-                        <option value="2026">2016</option>
-                        <option value="2027">2017</option>
-                        <option value="2028">2018</option>
-                        <option value="2029">2019</option>
-                        <option value="2030">2020</option>
-                        <option value="2031">2016</option>
-                        <option value="2032">2017</option>
-                        <option value="2033">2018</option>
-                        <option value="2034">2019</option>
-                        <option value="2035">2020</option>
-                        <option value="2036">2016</option>
-                        <option value="2037">2017</option>
-                        <option value="2038">2018</option>
-                        <option value="2039">2019</option>
-                        <option value="2040">2020</option>
-                    </select>
-                </p>
-            </th>
-            <th>
-                <p>
-                    <select style="width: 200px">
-                        <option value="">月</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                    </select>
-                </p>
-            </th>
-            <th>
-                <p>
-                    <select style="width: 200px">
-                        <option value="">日</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                        <option value="13">13</option>
-                        <option value="14">14</option>
-                        <option value="15">15</option>
-                        <option value="16">16</option>
-                        <option value="17">17</option>
-                        <option value="18">18</option>
-                        <option value="19">19</option>
-                        <option value="20">20</option>
-                        <option value="21">21</option>
-                        <option value="22">22</option>
-                        <option value="23">23</option>
-                        <option value="24">24</option>
-                        <option value="25">25</option>
-                        <option value="26">26</option>
-                        <option value="27">27</option>
-                        <option value="28">28</option>
-                        <option value="29">29</option>
-                        <option value="30">30</option>
-                        <option value="31">31</option>
-                    </select>
-                </p>
-            </th>
-    </table>
-    <a href=“event2.html”><center>印刷画面へ</center></a>
+
+
+    <select name="year" onchange="year_outputSelectedValueAndText(this);">
+        <option value="0">年</option>
+        <option value="2016">2016年</option>
+        <option value="2017">2017年</option>
+        <option value="2018">2018年</option>
+        <option value="2019">2019年</option>
+        <option value="2020">2020年</option>
+        <option value="2021">2021年</option>
+        <option value="2022">2022年</option>
+        <option value="2023">2023年</option>
+        <option value="2024">2024年</option>
+        <option value="2025">2025年</option>
+        <option value="2026">2026年</option>
+        <option value="2027">2027年</option>
+        <option value="2028">2028年</option>
+        <option value="2029">2029年</option>
+        <option value="2030">2030年</option>
+        <option value="2031">2031年</option>
+        <option value="2032">2032年</option>
+        <option value="2033">2033年</option>
+        <option value="2034">2034年</option>
+        <option value="2035">2035年</option>
+        <option value="2036">2036年</option>
+        <option value="2037">2037年</option>
+        <option value="2038">2038年</option>
+        <option value="2039">2039年</option>
+        <option value="2040">2040年</option>
+    </select>
+
+
+    <select name="month" onchange="month_outputSelectedValueAndText(this);">
+        <option value="0">月</option>
+        <option value="1">1月</option>
+        <option value="2">2月</option>
+        <option value="3">3月</option>
+        <option value="4">4月</option>
+        <option value="5">5月</option>
+        <option value="6">6月</option>
+        <option value="7">7月</option>
+        <option value="8">8月</option>
+        <option value="9">9月</option>
+        <option value="10">10月</option>
+        <option value="11">11月</option>
+        <option value="12">12月</option>
+    </select>
+
+    <select name="day" onchange="day_outputSelectedValueAndText(this);">
+        <option value="0">日</option>
+        <option value="1">1日</option>
+        <option value="2">2日</option>
+        <option value="3">3日</option>
+        <option value="4">4日</option>
+        <option value="5">5日</option>
+        <option value="6">6日</option>
+        <option value="7">7日</option>
+        <option value="8">8日</option>
+        <option value="9">9日</option>
+        <option value="10">10日</option>
+        <option value="11">11日</option>
+        <option value="12">12日</option>
+        <option value="13">13日</option>
+        <option value="14">14日</option>
+        <option value="15">15日</option>
+        <option value="16">16日</option>
+        <option value="17">17日</option>
+        <option value="18">18日</option>
+        <option value="19">19日</option>
+        <option value="20">20日</option>
+        <option value="21">21日</option>
+        <option value="22">22日</option>
+        <option value="23">23日</option>
+        <option value="24">24日</option>
+        <option value="25">25日</option>
+        <option value="26">26日</option>
+        <option value="27">27日</option>
+        <option value="28">28日</option>
+        <option value="29">29日</option>
+        <option value="30">30日</option>
+        <option value="31">31日</option>
+    </select>
+    <select name="week" onchange="week_outputSelectedValueAndText(this);">
+        <option value="">曜日</option>
+        <option value="日曜日">日曜日</option>
+        <option value="月曜日">月曜日</option>
+        <option value="火曜日">火曜日</option>
+        <option value="水曜日">水曜日</option>
+        <option value="木曜日">木曜日</option>
+        <option value="金曜日">金曜日</option>
+        <option value="土曜日">土曜日</option>
+    </select>
+
+
+    <input type="button" value="プリント" onclick="OnButtonClick();" />
+
+    <script type="text/JavaScript">
+
+        var eve = 0, year = 0, month = 0, day = 0, week = 0;
+        var eveindx = 0, yearindx = 0, monthindx = 0, dayindx = 0, weekindx = 0;
+        function select_outputSelectedValueAndText(obj) {
+            var idx = obj.selectedIndex;
+            var value = obj.options[idx].value; // 値
+            eveindx = value;
+            eve = obj.options[idx].text;  // 表示テキスト
+            console.log('value = ' + value + ', ' + 'text = ' + eve);
+        }
+
+        function year_outputSelectedValueAndText(obj) {
+            var idx = obj.selectedIndex;
+            var value = obj.options[idx].value; // 値
+            year = obj.options[idx].text;  // 表示テキスト
+            console.log('value = ' + value + ', ' + 'text = ' + year);
+        }
+
+        function month_outputSelectedValueAndText(obj) {
+            var idx = obj.selectedIndex;
+            var value = obj.options[idx].value; // 値
+            month = obj.options[idx].text;  // 表示テキスト
+            console.log('value = ' + value + ', ' + 'text = ' + month);
+        }
+
+        function day_outputSelectedValueAndText(obj) {
+            var idx = obj.selectedIndex;
+            var value = obj.options[idx].value; // 値
+            day = obj.options[idx].text;  // 表示テキス
+            console.log('value = ' + value + ', ' + 'text = ' + day);
+        }
+
+        function week_outputSelectedValueAndText(obj) {
+            var idx = obj.selectedIndex;
+            var value = obj.options[idx].value; // 値
+            week = obj.options[idx].text;  // 表示テキスト
+            console.log('value = ' + value + ', ' + 'text = ' + week);
+        }
+        
+        function OnButtonClick() {
+            if ((eve != 0) && (year != 0) && (month != 0) && (day != 0) && (week != 0)) { // インデックスが0番でなかったら
+                console.log(eve);
+                console.log(eve);
+                console.log(eve);
+                console.log(eve);
+                console.log(eve);
+                //var text = "イベント：" + eve + " " + year + month + day + week;
+                //document.write(text);
+
+                if (eveindx == "1") {
+                    document.write('<img src="./img/bazzer.jpg" width="792" height="568" />');
+                    document.write(year + month + day + week);
+                } else if (eveindx == "2") {
+                    document.write('<img src="./img/sports.jpg" width="792" height="568" />');
+                    document.write(year + month + day + week);
+                } else if (eveindx == "3") {
+                    document.write('<img src="./img/matsuri.jpg" width="792" height="568" />');
+                    document.write(year + month + day + week);
+                } else if (eveindx == "4") {
+                    document.write('<img src="./img/mochi.jpg" width="792" height="568" />');
+                    document.write(year + month + day + week);
+                } else if (eveindx == "5") {
+                    document.write('<img src="./img/sotsuenshiki.jpg" width="792" height="568" />');
+                    document.write(year + month + day + week);
+                }
+            } else {
+                alert("選択して下さい");
+            }
+        }
+
+        
+    </script>
+
 
 
     <!-- Load script -->
@@ -126,4 +200,5 @@
     <!-- Load script end -->
 
 </body>
+
 </html>
