登録終了画面の微修正

--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -10,10 +10,10 @@
   </head>
 
   <body>
- <p>登録が完了しました
+ <center><p>登録が完了しました
   </p>
 
 <INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();">
-
+</center>
   </body>
   </html>
