--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -13,16 +13,15 @@
 <title>園児名簿登録フォーム</title>
 </head>
 
-<body>
+<body background=“0410_gingham.jpg” bgcolor=“#ffc8c8” text="#000000" link="#0000ff" vlink="#800080" alink="#ff0000">
 
-
-<div class='header'><h2><center>つくしの子保育園<BR>園児名簿登録</center></h2></div>
+<div class='header'><h2><center><font face=monospace>つくしの子保育園<BR>園児名簿登録</font></center></h2></div>
 <p>以下に必要事項を入力してください
 </p>
 
 <form action=http://localhost:8888/home.php method=“post”>
 
-園児のお名前<BR><input type=“text” name=“nametest” >
+園児のお名前<BR><input type=“text” name=“nametest” />
 <BR>
 
 <!-- ▼郵便番号入力フィールド(7桁) -->
@@ -63,14 +62,13 @@
 <OPTION value=“yahoo”>yahoo.ne.jp</OPTION>
 <OPTION value=“gmail”>gmail.com</OPTION>
 </SELECT>
-<BR>上記のメールアドレスにない方はこちらに入力してください↓<BR>
+<BR>上記のメールアドレスにない方は<BR>こちらに入力してください↓<BR>
 <INPUT type=“test” name=mail>
 
 </p>
 
 <center><button type =‘submit’ name=‘action’ value=‘kakunin’>確認画面へ</button></center>
 </form>
-
 
 </body>
 </html>
