--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -10,10 +10,12 @@
   </head>
 
   <body>
+<font face=fantasy>
  <center><p>登録が完了しました
   </p>
 
 <INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();">
 </center>
+</font>
   </body>
   </html>
