--- a/development/kindergarten_roster_management/platforms/browser/www/roster.html
+++ b/development/kindergarten_roster_management/platforms/browser/www/roster.html
@@ -15,10 +15,10 @@
 
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter name"/>
-    <ul class='list employee-list'></ul>
+    <table class='table table-striped'></table>
 </div>
 
-<table class="table table-striped">
+<table>
   <!-- table label -->
 
   <tr>
