--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -15,51 +15,8 @@
 
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter name"/>
-    <table class='table table-striped'></table>
-</div>
-
-<table>
-  <!-- table label -->
-
-  <tr>
-    <th>ID</th>
-    <th>所属</th>
-    <th>名前</th>
-  </tr>
-
-
-  <!-- ↓contents of table -->
-  <tr>
-    <th>1</th>
-    <th><img src="img/bird.png" alt="ひよこ組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/83Ic6F">ピヨピヨ</a></th>
-  </tr>
-
-  <tr>
-    <th>2</th>
-    <th><img src="img/rion.png" alt="らいおん組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/xD5HFp">がおー</a></th>
-  </tr>
-
-  <tr>
-    <th>3</th>
-    <th><img src="img/rabit.png" alt="うさぎ組" height="50px" width="50px"/></th>
-    <th><a href="detailRoster.html">ぴょんぴょん</th>
-  </tr>
-
-  <tr>
-    <th>4</th>
-    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>小学生だ蔵</th>
-  </tr>
-
-  <tr>
-    <th>5</th>
-    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>卒園した蔵</th>
-  </tr>
-
-
+    <table class='table table-striped'>
+    </table>
 </div>
 
 <!-- Load script -->
