--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class='header'><h1><center>つくしのこ保育園名簿</center></h1></div>
+<div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter name"/>
