--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -10,12 +10,25 @@
   </head>
 
   <body>
-<font face=fantasy>
- <center><p>登録が完了しました
+<font face=fantasy size="6">
+ <center><p>登録 ありがとうございました
   </p>
 
-<INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();">
+<center><img src="hoikuen.gif"  width="15%" height="15%"></center><BR>
+
+<font face=fantasy size="5" color="hotpink">
+ <center><p>つくしの子保育園
+  </p>
+
+</font>
+
+<font face=fantasy size="hotpink">
+<INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();" style="width:10%;font-size:50px;">
 </center>
 </font>
+
+
+<img src="tsukushi.gif"  width="50%" height="20%" ><img src="tsukushi.gif"  width="50%" height="20%">
+
   </body>
   </html>
