--- a/development/kindergarten_roster_management/www/detailRoster.html
+++ b/development/kindergarten_roster_management/www/detailRoster.html
@@ -15,32 +15,16 @@
 
 <input type="button" value="前のページへ戻る" width="5px" onclick="history.back()">
 
-<table class="table table-striped">
   <!-- table label -->
-  <tr>
-    <th>ID</th>
-    <th>名前</th>
-    <th>住所</th>
-    <th>電話番号</th>
-  </tr>
+  <table class='table table-striped'>
+  </table>
 
-  <!-- ↓contents of table -->
-  <tr>
-    <th>1</th>
-    <th>ぴょんぴょん</th>
-    <th>ウサギ県ウサギ市ウサギ町5丁目</th>
-    <th>090-1122-3344</th>
-  </tr>
-
-</div>
-
-<!-- Load script -->
-<script src="cordova.js"></script>
-<script src="lib/jquery.js"></script>
-<script src="lib/handlebars.js"></script>
-<script src="js/services/websql/EmployeeService.js"></script>
-<script src="js/app.js"></script>
-<!-- Load script end -->
-
+  <!-- Load script -->
+  <script src="cordova.js"></script>
+  <script src="lib/jquery.js"></script>
+  <script src="lib/handlebars.js"></script>
+  <script src="js/services/websql/EmployeeService.js"></script>
+  <script src="js/app.js"></script>
+  <!-- Load script end -->
 </body>
 </html>
