ボタンの修正

--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -23,7 +23,7 @@
 </font>
 
 <font face=fantasy size="hotpink">
-<INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();" style="width:10%;font-size:50px;">
+<INPUT TYPE=button VALUE="ブラウザを閉じる" onClick="window.close();" >
 </center>
 </font>
 
