誤字の訂正

--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -9,7 +9,7 @@
       <link href="assets/css/styles.css" rel="stylesheet">
   </head>
 
-<body onUnload="window.opener.close()">>
+<body onUnload="window.opener.close()">
 <font face=fantasy size="6">
  <center><p>登録 ありがとうございました
   </p>
