Web SQLにアクセスできない #33

--- a/development/kindergarten_roster_management/platforms/browser/www/detailRoster.html
+++ b/development/kindergarten_roster_management/platforms/browser/www/detailRoster.html
@@ -11,31 +11,15 @@
 </head>
 <body>
 
-<div class='header'><h1><center>詳細情報</center></h1></div>
+<div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 
-<input type="button" value="前のページへ戻る" width="5px" onclick="history.back()">
-
-<table class="table table-striped">
-  <!-- table label -->
-  <tr>
-    <th>ID</th>
-    <th>名前</th>
-    <th>住所</th>
-    <th>電話番号</th>
-  </tr>
-
-  <!-- ↓contents of table -->
-  <tr>
-    <th>1</th>
-    <th>ぴょんぴょん</th>
-    <th>ウサギ県ウサギ市ウサギ町5丁目</th>
-    <th>090-1122-3344</th>
-  </tr>
-
-</div>
+<!-- <div class='search-view'>
+    <input class='search-key' type="search" placeholder="名簿検索"/>
+    <table class='table table-striped'>
+    </table>
+</div> -->
 
 <!-- Load script -->
-<script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="js/services/websql/EmployeeService.js"></script>
