--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -14,13 +14,12 @@
 <div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 
 <div class='search-view'>
-    <input class='search-key' type="search" placeholder="Enter name"/>
+    <input class='search-key' type="search" placeholder="名簿検索"/>
     <table class='table table-striped'>
     </table>
 </div>
 
 <!-- Load script -->
-<script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="js/services/websql/EmployeeService.js"></script>
