--- a/development/kindergarten_roster_management/platforms/browser/www/roster.html
+++ b/development/kindergarten_roster_management/platforms/browser/www/roster.html
@@ -11,59 +11,15 @@
 </head>
 <body>
 
-<div class='header'><h1><center>つくしのこ保育園名簿</center></h1></div>
+<div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 
 <div class='search-view'>
-    <input class='search-key' type="search" placeholder="Enter name"/>
-    <table class='table table-striped'></table>
-</div>
-
-<table>
-  <!-- table label -->
-
-  <tr>
-    <th>ID</th>
-    <th>所属</th>
-    <th>名前</th>
-  </tr>
-
-
-  <!-- ↓contents of table -->
-  <tr>
-    <th>1</th>
-    <th><img src="img/bird.png" alt="ひよこ組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/83Ic6F">ピヨピヨ</a></th>
-  </tr>
-
-  <tr>
-    <th>2</th>
-    <th><img src="img/rion.png" alt="らいおん組" height="50px" width="50px"/></th>
-    <th><a href="http://goo.gl/xD5HFp">がおー</a></th>
-  </tr>
-
-  <tr>
-    <th>3</th>
-    <th><img src="img/rabit.png" alt="うさぎ組" height="50px" width="50px"/></th>
-    <th><a href="detailRoster.html">ぴょんぴょん</th>
-  </tr>
-
-  <tr>
-    <th>4</th>
-    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>小学生だ蔵</th>
-  </tr>
-
-  <tr>
-    <th>5</th>
-    <th><img src="img/bye.png" alt="卒業" height="50px" width="50px"/></th>
-    <th>卒園した蔵</th>
-  </tr>
-
-
+    <input class='search-key' type="search" placeholder="名簿検索"/>
+    <table class='table table-striped'>
+    </table>
 </div>
 
 <!-- Load script -->
-<script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="js/services/websql/EmployeeService.js"></script>
