--- a/development/kindergarten_roster_management/www/detailRoster.html
+++ b/development/kindergarten_roster_management/www/detailRoster.html
@@ -11,20 +11,96 @@
 </head>
 <body>
 
-<div class='header'><h1><center>詳細情報</center></h1></div>
+<div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 
-<input type="button" value="前のページへ戻る" width="5px" onclick="history.back()">
+    <table class='table table-striped'>
 
-  <!-- table label -->
-  <table class='table table-striped'>
-  </table>
+<script>
+// var db = openDatabase("EmployeeDemoDB", "1.0", "Employee Demo DB", 200000);
+var datatable = null;
+var db = openDatabase('MyData', '', 'My Database', 102400);
 
-  <!-- Load script -->
-  <script src="cordova.js"></script>
-  <script src="lib/jquery.js"></script>
-  <script src="lib/handlebars.js"></script>
-  <script src="js/services/websql/EmployeeService.js"></script>
-  <script src="js/app.js"></script>
-  <!-- Load script end -->
+function init(){
+    datatable = document.getElementById("datatable");
+    showAllData();
+}
+
+function removeAllData(){
+    for (var i =datatable.childNodes.length-1; i>=0; i--) {
+        datatable.removeChild(datatable.childNodes[i]);
+    }
+    var tr = document.createElement('tr');
+    var th1 = document.createElement('th');
+    var th2 = document.createElement('th');
+    var th3 = document.createElement('th');
+    th1.innerHTML = '名前';
+    th2.innerHTML = 'メモ';
+    th3.innerHTML = '日時';
+    tr.appendChild(th1);
+    tr.appendChild(th2);
+    tr.appendChild(th3);
+    datatable.appendChild(tr);
+}
+
+function showData(row) {
+    var tr = document.createElement('tr');
+    var td1 = document.createElement('td');
+    td1.innerHTML = row.name;
+    var td2 = document.createElement('td');
+    td2.innerHTML = row.message;
+    var td3 = document.createElement('td');
+    var t = new Date();
+    t.setTime(row.time);
+    td3.innerHTML = t.toLocaleDateString() + " " + t.toLocaleTimeString();
+    tr.appendChild(td1);
+    tr.appendChild(td2);
+    tr.appendChild(td3);
+    datatable.appendChild(tr);
+}
+
+function showAllData() {
+    db.transaction(function(tx) {
+        tx.executeSql('CREATE TABLE IF NOT EXISTS MsgData(name TEXT, message TEXT, time INTEGER)',[]);
+        tx.executeSql('SELECT * FROM MsgData', [], function(tx, rs) {
+            removeAllData();
+            for(var i = 0; i < rs.rows.length; i++) {
+                showData(rs.rows.item(i));
+            }
+        });
+    });
+}
+
+function addData(name, message, time) {
+    db.transaction(function(tx) {
+        tx.executeSql('INSERT INTO MsgData VALUES(?, ?, ?)', [name, message, time],
+            function(tx, rs) {
+                alert("SUCCESS!!");
+            },
+            function(tx, error) {
+                alert(source + "::" + message);
+            });
+        }
+    );
+}
+
+function saveData(){
+    var name = document.getElementById('name').value;
+    var memo = document.getElementById('memo').value;
+    var time = new Date().getTime();
+    addData(name,memo,time);
+    showAllData();
+}
+
+</script>
+
+    </table>
+
+<!-- Load script -->
+<script src="lib/jquery.js"></script>
+<script src="lib/handlebars.js"></script>
+<script src="js/services/websql/EmployeeService.js"></script>
+<script src="js/app.js"></script>
+<!-- Load script end -->
+
 </body>
 </html>
