--- a/development/kindergarten_roster_management/www/detailRoster.html
+++ b/development/kindergarten_roster_management/www/detailRoster.html
@@ -14,7 +14,7 @@
 <div class='header'><h1><center>つくしの子保育園名簿</center></h1></div>
 <table class='table table-striped'></table>
 
-<input class='search-key' type="search" placeholder="名簿検索"/>
+<input class='search-key' type="hidden" placeholder="名簿検索"/>
 <!-- Load script -->
 <script src="lib/jquery.js"></script>
 <script src="lib/handlebars.js"></script>
